@@ -873,6 +873,70 @@ RQuery::$defaultFilters['rule']['app']['operators']['has.nocase'] = Array(
     )
     //'argObjectFinder' => "\$objectFind=null;\n\$objectFind=\$object->tags->parentCentralStore->find('!value!');"
 );
+RQuery::$defaultFilters['rule']['app']['operators']['includes.full.or.partial'] = Array(
+    'Function' => function(RuleRQueryContext $context )
+    {
+        $rule = $context->object;
+        if( $rule->isNatRule() || $rule->isDecryptionRule() || $rule->isCaptivePortalRule() || $rule->isDoSRule() )
+            return false;
+
+        /** @var Rule|SecurityRule|AppOverrideRule|PbfRule|QoSRule $object */
+        return $rule->apps->includesApp($context->value) === true;
+    },
+    'arg' => true,
+    #'argObjectFinder' => "\$objectFind=null;\n\$objectFind=\$object->apps->parentCentralStore->find('!value!');",
+    'ci' => Array(
+        'fString' => '(%PROP% ssl)',
+        'input' => 'input/panorama-8.0.xml'
+    )
+);
+RQuery::$defaultFilters['rule']['app']['operators']['includes.full.or.partial.nocase'] = Array(
+    'Function' => function(RuleRQueryContext $context )
+    {
+        $rule = $context->object;
+        if( $rule->isNatRule() || $rule->isDecryptionRule() || $rule->isCaptivePortalRule() || $rule->isDoSRule() )
+            return false;
+
+        return $rule->apps->includesApp($context->value, false) === true;
+    },
+    'arg' => true,
+    'ci' => Array(
+        'fString' => '(%PROP% ssl)',
+        'input' => 'input/panorama-8.0.xml'
+    )
+);
+RQuery::$defaultFilters['rule']['app']['operators']['included-in.full.or.partial'] = Array(
+    'Function' => function(RuleRQueryContext $context )
+    {
+        $rule = $context->object;
+        if( $rule->isNatRule() || $rule->isDecryptionRule() || $rule->isCaptivePortalRule() || $rule->isDoSRule() )
+            return false;
+
+        /** @var Rule|SecurityRule|AppOverrideRule|PbfRule|QoSRule $object */
+        return $rule->apps->includedInApp($context->value) === true;
+    },
+    'arg' => true,
+    #'argObjectFinder' => "\$objectFind=null;\n\$objectFind=\$object->apps->parentCentralStore->find('!value!');",
+    'ci' => Array(
+        'fString' => '(%PROP% ssl)',
+        'input' => 'input/panorama-8.0.xml'
+    )
+);
+RQuery::$defaultFilters['rule']['app']['operators']['included-in.full.or.partial.nocase'] = Array(
+    'Function' => function(RuleRQueryContext $context )
+    {
+        $rule = $context->object;
+        if( $rule->isNatRule() || $rule->isDecryptionRule() || $rule->isCaptivePortalRule() || $rule->isDoSRule() )
+            return false;
+
+        return $rule->apps->includedInApp($context->value, false) === true;
+    },
+    'arg' => true,
+    'ci' => Array(
+        'fString' => '(%PROP% ssl)',
+        'input' => 'input/panorama-8.0.xml'
+    )
+);
 
 
 //                                              //
