@@ -19,6 +19,7 @@ rules-edit: new filter 'service has.recursive', 'secprof av-profile.is.set', 'se
 rules-edit: new filter 'secprof file-profile.is', 'secprof file-profile.is.set', 'secprof data-profile.is', 'secprof data-profile.is.set'
 rules-edit: new filter 'service has.only', 'user has', 'user has.regex', 'url.category is.any'
 rules-edit: new filter 'app technology.is', 'app category.is', 'app subcategory.is', 'app characteristic.has xxxx'
+rules-edit: new filter 'app includes.full.or.partial', 'app includes.full.or.partial.nocase', 'app included-in.full.or.partial', 'app included-in.full.or.partial.nocase'
 rules-edit: action 'tag-Add-Force' new field 'tagColor' to setColor for forced Tag creation
 rules-edit: action 'description-append' new field 'newline' as boolean parameter no/yes
 rules-edit: action 'display' extend with logsetting information / URL category
